# DeepKick

./: .gitignore  README.md  main.py  pyproject.toml  yolo_inference.py
model/trained/: args.yaml  results.csv
notebooks/: color-clustering.ipynb
runs/detect/predict2/: 08fd33_4.avi
team_mapper/: __init__.py  team_mapping.py
trackers/: tracker.py
utils/: __init__.py  bbox_utils.py  video_utils.py
