[project]
name = "footballanalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Rupesh-132", email = "rupeshkumarzs153@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics (>=8.3.102,<9.0.0)",
    "supervision",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
